Fix put request test